<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.itayr.noteshare.activities.LogInActivity"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_marginTop="50sp"/>

    <EditText
        android:id="@+id/email_sign_up_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_field_hint"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/username_sign_up_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_field_hint"
        android:layout_below="@id/email_sign_up_edit_text"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/password_sign_up_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_field_hint"
        android:layout_below="@id/username_sign_up_edit_text"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_text"
        android:layout_below="@id/password_sign_up_edit_text"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white" />

</RelativeLayout>
